tests/checker/fail/html_string_ceremony.can
Banner = Html

Unit => Banner {
    Html("<button>+</button>")
}

Unit => Program {
    Banner() -> String -> Print
}
